--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  font-family: 'Epilogue', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .bg-img {
+    @apply bg-cover min-h-screen bg-[url('./images/background.png')];
+  }
+
+  .title-login {
+    @apply text-[#41197F] text-center font-medium tracking-[3.3px] text-xl italic uppercase mb-5;
+  }
+
+  .input-login {
+    @apply border-[#41197F] border-[1px] rounded-md h-10 w-[276px] pl-4 focus:outline-none text-[#41197F] placeholder:text-[#42197f7f];
+  }
+
+  .button-login {
+    @apply bg-[#FCC436] text-white rounded-md h-10 w-[276px] text-center font-bold tracking-[0.42px] text-sm uppercase;
+  }
 }
